# real-time-person-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  code-quality.yml
src/: config.py  locales.py  main.py
src/bot/: config.py  main.py  service.py
src/detector/: __init__.py  alert_service.py  cam_analyzer.py  camera_service.py  enums.py  image_processor.py  interfaces.py  yolo_service.py
