[project]
name = "cam-analyser"
version = "1.0.0"
description = "Интеллектуальная система анализа видеопотока с детекцией людей и уведомлениями в Telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "aiogram>=3.22.0",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "opencv-python>=4.12.0.88",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.11",
    "ultralytics>=8.3.189",
]

[tool.ruff]
target-version = "py312"
line-length = 128

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py

[tool.black]
line-length = 128
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
